--- a/index.html
+++ b/index.html
@@ -115,6 +115,11 @@
       border-radius: 8px;
       box-shadow: 0 0 15px rgba(0,0,0,0.4);
     }
+    .hero-button-container {
+  width: 100%;
+  text-align: center;
+  margin-top: 2rem;
+}
     .grid {
       display: grid;
       grid-template-columns: repeat(auto-fit, minmax(280px, 1fr));
