--- a/index.html
+++ b/index.html
@@ -244,8 +244,8 @@
 <section class="hero">
   <div class="hero-text">
     <h1 class="gradient-heading">The Latest Issue</h1>
-    <p>This issue features stories from cutting-edge cyberpunk voices including [author], [author], [author], and [author]. You'll find tales of [theme], [theme], and [theam].</p>
-    <p>Also in this issue: art spreads by [artist], and [artist] and essays exploring [themes and other weird shit].</p>
+    <p>This issue features stories from console cowboys like Beevis, Butthead, and Your Mom. Core themes in this one include live, laugh, and love.</p>
+    <p>Also in this issue: art spreads by artistpoop, and farthouse and essays exploring idk, are we putting essays in this b?</p>
   </div>
   <img src="Asimov Test Cover.jpg" alt="Latest issue cover">
   <div class="hero-button-container">
