--- a/index.html
+++ b/index.html
@@ -118,7 +118,7 @@
     .hero-button-container {
   width: 100%;
   text-align: center;
-  margin-top: 0.5rem;
+  margin-top: 0rem;
 }
     .grid {
       display: grid;
@@ -245,7 +245,7 @@
   <div class="hero-text">
     <h1 class="gradient-heading">The Latest Issue</h1>
     <p>This issue features stories from console cowboys like Beevis, Butthead, and Your Mom. Core themes in this one include live, laugh, and love.</p>
-    <p>Also in this issue: art spreads by artistpoop, and farthouse and essays exploring idk, are we putting essays in this b?</p>
+    <p>Also in this issue: art spreads by artistpoop and farthouse, as well as essays exploring (idk, are we putting essays in this b?)</p>
   </div>
   <img src="Asimov Test Cover.jpg" alt="Latest issue cover">
   <div class="hero-button-container">
