--- a/about.html
+++ b/about.html
@@ -223,7 +223,7 @@
 
   <section class="content">
     <h1 class="gradient-heading">About Burnline</h1>
-    <p><strong>Burnline</strong> is a digital magazine run by a small crew who's tried our best to make a hub for all things cyberpunk. It started when one of us was looking for a spot to publish some cyberpunk short fiction and failed to do so. Is it possible that they were never published because their work sucked? Possibly, but that doesn't change the fact that there weren't many outlets dedicated purely to the cyberpunk subgenre. We wanted there to be a cohesive place for that.</p>
+    <p><strong>Burnline</strong> is a digital magazine run by a small crew who's tried our best to make a hub for all things cyberpunk. It started when one of us was looking for a spot to publish some cyberpunk short fiction and failed to do so. Is it possible that they were never published because their work sucked? Absolutely, but that doesn't change the fact that there weren't many outlets dedicated purely to the cyberpunk subgenre. We wanted there to be a cohesive place for that.</p>
     <p>We publish stories, art, and commentary that reflects the weirdness of whatever the hell cyberpunk is supposed to be. Feel like the real world is folding in on itself? Us too. Let's make some art about it.</p>
     <p>If you’d like to submit, collaborate, or just say hi, head over to our  <a href="submit.html" class="gradient-blue-text">Submit page</a> or reach out at <a href="mailto:contact@burnlinemag.com" class="gradient-pink-text">contact@burnlinemag.com</a>. If there's anything we don't express on this site that you think belongs here, we'd love to hear about it.</p>
   </section>
