--- a/bestmedia.html
+++ b/bestmedia.html
@@ -223,9 +223,7 @@
 
   <section class="content">
     <h1 class="gradient-heading">Best Cyberpunk Media</h1>
-    <p>Welcome to Burnline's hub for celebrating the finest in cyberpunk storytelling. From neon-drenched anime to gritty novels and immersive games, cyberpunk has always challenged our ideas of technology, identity, and rebellion.</p>
-    <p>We’re building an interactive space where you can vote for your favorite works across categories like film, TV, literature, and games. Stay tuned—soon, you'll be able to make your voice heard and help us crown the best of the genre.</p>
-    <p>Until then, take a moment to reflect: what cyberpunk media left its mark on you?</p>
+    <p>Tell us, what are your favorite pieces of cyberpunk content? Upvote content that stuck with you, downvote anything that you think is overrated.</p>
   </section>
 
   <footer>
