--- a/bestmedia.html
+++ b/bestmedia.html
@@ -2,9 +2,9 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Best Cyberpunk Media – Burnline</title>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet">
+  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet"/>
   <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
   <style>
     body {
@@ -26,9 +26,7 @@
       color: #0f0f1c;
       padding: 1rem 2rem;
       font-size: 2rem;
-      font-family: 'Orbitron', sans-serif;
       flex-wrap: wrap;
-      position: relative;
     }
 
     .logo-title {
@@ -54,47 +52,10 @@
       color: #0f0f1c;
       text-decoration: none;
       font-weight: bold;
-      transition: color 0.3s;
     }
 
     .site-nav a:hover {
       color: #ff4ac2;
-    }
-
-    .hamburger {
-      display: none;
-      flex-direction: column;
-      justify-content: center;
-      cursor: pointer;
-      width: 30px;
-      height: 25px;
-      gap: 5px;
-    }
-
-    .hamburger div {
-      background: #0f0f1c;
-      height: 4px;
-      width: 100%;
-      border-radius: 2px;
-    }
-
-    @media (max-width: 768px) {
-      .site-nav {
-        flex-direction: column;
-        width: 100%;
-        display: none;
-        background-color: #0df6e3;
-        padding: 1rem 0;
-        margin-top: 1rem;
-      }
-
-      .site-nav.active {
-        display: flex;
-      }
-
-      .hamburger {
-        display: flex;
-      }
     }
 
     .gradient-heading {
@@ -111,52 +72,43 @@
       padding: 0 2rem;
     }
 
-    .content h1 {
-      color: #ff4ac2;
-      margin-bottom: 1rem;
-    }
-
-    .content p {
-      line-height: 1.7;
-      color: #ccc;
-      margin-bottom: 1.2rem;
-    }
-
-    canvas {
+    .chart-container {
       margin-bottom: 2rem;
     }
 
-    .chart-container {
-      margin-top: 3rem;
-      background: none;
-    }
-
-    .vote-list {
-      margin-top: 2rem;
-    }
-
-    .vote-item {
+    .media-item {
       display: flex;
       justify-content: space-between;
       align-items: center;
-      background: #2c2c3e;
-      padding: 0.75rem 1rem;
+      background-color: rgba(255, 255, 255, 0.05);
       border-radius: 6px;
-      margin-bottom: 0.5rem;
-      font-family: 'Inter', sans-serif;
+      padding: 1rem;
+      margin-bottom: 1rem;
+    }
+
+    .media-title {
+      font-weight: bold;
+      flex-grow: 1;
+    }
+
+    .vote-buttons {
+      display: flex;
+      align-items: center;
+      gap: 0.5rem;
     }
 
     .vote-buttons button {
       background: none;
       border: none;
-      color: #0df6e3;
-      font-size: 1.2rem;
       cursor: pointer;
-      margin-left: 0.5rem;
+      font-size: 1.5rem;
+      color: #0df6e3;
+      transition: transform 0.1s ease;
     }
 
     .vote-buttons button:hover {
-      color: #f72585;
+      transform: scale(1.2);
+      color: #ff4ac2;
     }
 
     footer {
@@ -177,11 +129,6 @@
       flex: 1;
       min-width: 250px;
       margin: 1rem;
-    }
-
-    .footer-logo {
-      width: 60px;
-      margin-bottom: 1rem;
     }
 
     .newsletter-input {
@@ -207,31 +154,27 @@
       background-color: #0bc2b7;
     }
 
+    .footer-logo {
+      width: 60px;
+      margin-bottom: 1rem;
+    }
+
     .footer-bottom {
       text-align: center;
       margin-top: 2rem;
       font-size: 0.8rem;
       color: #666;
     }
-
-    .footer-column a:hover {
-      text-decoration: underline;
-      color: #0df6e3;
-    }
   </style>
 </head>
 <body>
+
   <header class="site-header">
     <a href="index.html" class="logo-title">
       <img src="Flame logo-1.png.png" alt="Burnline logo">
       <span>BURNLINE</span>
     </a>
-    <div class="hamburger" onclick="toggleMenu()">
-      <div></div>
-      <div></div>
-      <div></div>
-    </div>
-    <nav class="site-nav" id="site-nav">
+    <nav class="site-nav">
       <a href="index.html">Home</a>
       <a href="fiction.html">Fiction</a>
       <a href="art.html">Art</a>
@@ -245,10 +188,10 @@
     <p>Tell us, what are your favorite pieces of cyberpunk content? Upvote content that stuck with you, downvote anything that you think is overrated.</p>
 
     <div class="chart-container">
-      <canvas id="ranking-chart" height="250"></canvas>
+      <canvas id="rankingChart" height="200"></canvas>
     </div>
 
-    <div class="vote-list" id="vote-list"></div>
+    <div id="media-list"></div>
   </section>
 
   <footer>
@@ -256,18 +199,16 @@
       <div class="footer-column">
         <img src="Flame logo-1.png.png" alt="Burnline Logo" class="footer-logo">
         <p style="line-height: 1.6;">Sign up to our newsletter to get the latest neon-lit stories and art from Burnline.</p>
-        <form style="margin-top: 1rem;">
+        <form>
           <input type="email" placeholder="Email Address" class="newsletter-input">
           <br>
           <button type="submit" class="newsletter-button">Subscribe</button>
         </form>
       </div>
-
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Get In Touch</h4>
         <p>contact@burnline.net<br><span style="font-size: 0.8rem;">(no story submissions by email)</span></p>
       </div>
-
       <div class="footer-column">
         <h4 style="color: #0df6e3;">Read</h4>
         <p><a href="#" style="color: #ccc; text-decoration: none;">Neon Dystopia</a></p>
@@ -275,104 +216,103 @@
         <p><a href="#" style="color: #ccc; text-decoration: none;">HackDust</a></p>
       </div>
     </div>
-
     <div class="footer-bottom">
       &copy; 2025 Burnline Magazine — All rights reserved
     </div>
   </footer>
 
   <script>
-    const items = [
-      { title: "Blade Runner", votes: 32 },
-      { title: "Ghost in the Shell", votes: 28 },
-      { title: "Akira", votes: 22 },
-      { title: "Cyberpunk 2077", votes: 35 },
-      { title: "Neuromancer", votes: 18 }
+    const mediaItems = [
+      { title: 'Blade Runner', votes: 25 },
+      { title: 'Ghost in the Shell', votes: 19 },
+      { title: 'Cyberpunk 2077', votes: 22 },
+      { title: 'Akira', votes: 15 },
+      { title: 'Neuromancer', votes: 17 }
     ];
 
-    let chart;
+    const mediaList = document.getElementById('media-list');
 
-    function renderChart() {
-      const ctx = document.getElementById('ranking-chart').getContext('2d');
-      const sorted = [...items].sort((a, b) => b.votes - a.votes);
-      const labels = sorted.map(i => i.title);
-      const data = sorted.map(i => i.votes);
-
-      const gradient = ctx.createLinearGradient(0, 0, 300, 0);
-      gradient.addColorStop(0, '#f72585');
-      gradient.addColorStop(1, '#7209b7');
-
-      if (chart) {
-        chart.data.labels = labels;
-        chart.data.datasets[0].data = data;
-        chart.update();
-      } else {
-        chart = new Chart(ctx, {
-          type: 'bar',
-          data: {
-            labels,
-            datasets: [{
-              data,
-              backgroundColor: gradient,
-              borderRadius: 4,
-              barThickness: 12
-            }]
-          },
-          options: {
-            indexAxis: 'y',
-            responsive: true,
-            plugins: {
-              legend: { display: false },
-              tooltip: {
-                callbacks: {
-                  label: ctx => `${ctx.parsed.x} votes`
-                }
-              }
-            },
-            scales: {
-              x: { display: false, grid: { display: false } },
-              y: { ticks: { color: '#f0f0f0' }, grid: { display: false } }
-            },
-            layout: {
-              padding: { top: 10, bottom: 10 }
-            }
-          }
-        });
-      }
-    }
-
-    function renderList() {
-      const list = document.getElementById('vote-list');
-      list.innerHTML = '';
-      const sorted = [...items].sort((a, b) => b.votes - a.votes);
-      sorted.forEach((item, index) => {
-        const div = document.createElement('div');
-        div.className = 'vote-item';
-        div.innerHTML = `
-          <span>${item.title}</span>
-          <span class="vote-buttons">
-            ${item.votes}
-            <button onclick="vote(${index}, 1)">\u25B2</button>
-            <button onclick="vote(${index}, -1)">\u25BC</button>
-          </span>
+    function renderMediaList() {
+      mediaList.innerHTML = '';
+      mediaItems.forEach((item, index) => {
+        const container = document.createElement('div');
+        container.className = 'media-item';
+        container.innerHTML = `
+          <div class="media-title">${item.title}</div>
+          <div class="vote-buttons">
+            <button class="upvote" data-index="${index}">▲</button>
+            <span>${item.votes}</span>
+            <button class="downvote" data-index="${index}">▼</button>
+          </div>
         `;
-        list.appendChild(div);
+        mediaList.appendChild(container);
+      });
+
+      document.querySelectorAll('.upvote').forEach(btn => {
+        btn.onclick = () => {
+          const i = parseInt(btn.getAttribute('data-index'));
+          mediaItems[i].votes++;
+          renderMediaList();
+          updateChart();
+        };
+      });
+
+      document.querySelectorAll('.downvote').forEach(btn => {
+        btn.onclick = () => {
+          const i = parseInt(btn.getAttribute('data-index'));
+          mediaItems[i].votes--;
+          renderMediaList();
+          updateChart();
+        };
       });
     }
 
-    function vote(index, delta) {
-      items[index].votes += delta;
-      renderList();
-      renderChart();
+    const ctx = document.getElementById('rankingChart').getContext('2d');
+    const gradient = ctx.createLinearGradient(0, 0, 400, 0);
+    gradient.addColorStop(0, '#f72585');
+    gradient.addColorStop(1, '#7209b7');
+
+    const chart = new Chart(ctx, {
+      type: 'bar',
+      data: {
+        labels: mediaItems.map(item => item.title),
+        datasets: [{
+          label: '',
+          data: mediaItems.map(item => item.votes),
+          backgroundColor: gradient,
+          borderRadius: 4,
+          barThickness: 12
+        }]
+      },
+      options: {
+        indexAxis: 'y',
+        plugins: {
+          legend: { display: false }
+        },
+        scales: {
+          x: {
+            grid: { display: false },
+            ticks: { display: false },
+            border: { display: false }
+          },
+          y: {
+            grid: { display: false },
+            ticks: {
+              color: '#f0f0f0',
+              font: { family: 'Orbitron', size: 12 }
+            },
+            border: { display: false }
+          }
+        }
+      }
+    });
+
+    function updateChart() {
+      chart.data.datasets[0].data = mediaItems.map(item => item.votes);
+      chart.update();
     }
 
-    function toggleMenu() {
-      const nav = document.getElementById('site-nav');
-      nav.classList.toggle('active');
-    }
-
-    renderList();
-    renderChart();
+    renderMediaList();
   </script>
 </body>
 </html>
