--- a/index.html
+++ b/index.html
@@ -274,11 +274,13 @@
   </section>
 
   <section class="grid" id="features">
+    <a href="https://bowliopia.github.io/burnline/fiction.html" class="card-link">
     <div class="card">
       <img src="AL Cover.png" alt="Featured Stories image">
       <h3>Featured Stories</h3>
       <p>Explore high-voltage fiction from the neon edge — a curated selection of our boldest, strangest, and most unforgettable tales.</p>
     </div>
+    </a>
 <a href="https://bowliopia.github.io/burnline/bestmedia.html" class="card-link">
   <div class="card">
     <img src="NM Art.png" alt="Poll image">
