--- a/index.html
+++ b/index.html
@@ -288,11 +288,13 @@
     <p>We asked readers to weigh in on the most iconic games, movies, books, and art that define the cyberpunk canon. Here’s what they said.</p>
   </div>
 </a>
+    <a href="https://bowliopia.github.io/burnline/staffpicks.html" class="card-link">
     <div class="card">
       <img src="CS2 Keyart.jpg" alt="Stuff We Like image">
-      <h3>Stuff We Like</h3>
-      <p>From glitchwave aesthetics to narrative-heavy indies, we round up the weird, wired, and wonderful media on our radar.</p>
+      <h3>Staff Picks</h3>
+      <p>From games to text, we've rounded up our favorite weird and wired media in the genre.</p>
     </div>
+    </a>
   </section>
 
   <footer>
