--- a/index.html
+++ b/index.html
@@ -292,7 +292,7 @@
     <div class="card">
       <img src="CS2 Keyart.jpg" alt="Stuff We Like image">
       <h3>Staff Picks</h3>
-      <p>From games to text, we've rounded up our favorite weird and wired media in the genre.</p>
+      <p>From games to text, we've rounded up our favorite weird and wired media in the genre. These are the ones that stuck. </p>
     </div>
     </a>
   </section>
